# crates.io-dependency-network

./: Cargo.toml  README.md  analysis.ipynb  community.ipynb  pyproject.toml  utils.py
outputs_2018-09-26/: core_edges.csv  core_graph.gml  core_nodes.csv  crates_dump.json  summary.json
outputs_2018-09-26/analysis/: centrality.csv  community_summary.json  metrics.json  powerlaw.json  small_world.json
outputs_2020-11-20/: core_edges.csv  core_nodes.csv  crates_dump.json  summary.json
outputs_2020-11-20/analysis/: centrality.csv  community_summary.json  metrics.json  powerlaw.json  small_world.json
outputs_2022-07-06/: core_nodes.csv  summary.json
outputs_2022-07-06/analysis/: centrality.csv  community_summary.json  metrics.json  powerlaw.json  small_world.json
outputs_2024-03-11/: core_nodes.csv  summary.json
outputs_2024-03-11/analysis/: centrality.csv  community_summary.json  metrics.json  powerlaw.json  small_world.json
outputs_2026-05-25/: core_nodes.csv  summary.json
outputs_2026-05-25/analysis/: centrality.csv  community_summary.json  metrics.json  powerlaw.json  small_world.json
